# inventree-federation

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: action.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: home.adoc  ref.adoc
src/inventree_federation/: __init__.py  inventree_federation.py
